; ModuleID = '/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_lib.c_engine_cleanup_add_last.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/engine/extr_eng_lib.c_engine_cleanup_add_last.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cleanup_stack = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @engine_cleanup_add_last(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = call i32 @int_cleanup_check(i32 1)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %21

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i32* @int_cleanup_item(i32* %8)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %7
  %13 = load i32, i32* @cleanup_stack, align 4
  %14 = load i32*, i32** %3, align 8
  %15 = call i64 @sk_ENGINE_CLEANUP_ITEM_push(i32 %13, i32* %14)
  %16 = icmp sle i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @OPENSSL_free(i32* %18)
  br label %20

20:                                               ; preds = %17, %12
  br label %21

21:                                               ; preds = %6, %20, %7
  ret void
}

declare dso_local i32 @int_cleanup_check(i32) #1

declare dso_local i32* @int_cleanup_item(i32*) #1

declare dso_local i64 @sk_ENGINE_CLEANUP_ITEM_push(i32, i32*) #1

declare dso_local i32 @OPENSSL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
